# icu-scheduling-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
application/: OWNER.md  __init__.py  etl_pipeline.py  evaluate_ppo.py  optimize.py  plan.py  run_etl_stage.py  run_p0.py  run_ppo.py  simulate.py  train_ppo.py
configs/: data.yaml.example  database.yaml.example  optimizer.yaml
data_access/: __init__.py  assignments_repo.py  mimic_repo.py
docs/: BACKLOG.md  BUGBOT.md  COLLABORATION.md  DATA_LOCAL.md  GITHUB_ISSUES.md  INNOVATION_ROADMAP.md  LAMBDA_TUNING.md  PARAM_STORY.md  PROJECT_GUIDE.md  README.md  STATUS.md  TEAM_RESTORE.md  TODO_OWNER.md
domain/: __init__.py
dumps/: .gitignore
infra/: __init__.py  config.py  db.py
migrations/: 001_layer1_schemas.sql  002_staging_icustays.sql  003_sequence_grants.sql
presentation/: OWNER.md  mcp_server.py  mcp_tools.py  streamlit_app.py
scripts/: OWNER.md  apply_migrations.ps1  bootstrap_from_dump.ps1  check_env.py  docker_init_mock.sh  export_layer1.ps1  init_databases_p0.sql  issue-comment-mcp.md  issue-hardening.md  issue-plan-body.md  issue-s3-body.md  mock_schema_decision.sql  mock_schema_scheduling.sql  nudge-pr3-review.md  nudge-s1-sofa.md  pr3-review.md  restore_layer1.ps1  run_data_pipeline.ps1  tune_lambda.py
tests/: test_cp_sat_quick.py  test_cp_sat_small.py  test_db.py  test_etl.py  test_lambda_tuning.py  test_lambda_weights.py  test_mcp_optimize.py  test_plan.py  (+8 more)
(+19 files in other folders)
